--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -10,6 +10,9 @@ $HTTP["host"] == "support.lampcms.com" {
 	# Q and A
 	#
 	#
+	"^/category/([a-zA-Z0-9_]+)([\/]{0,1})$" => "/index.php?a=viewcategory&slug=$1",
+	"^/category/([a-zA-Z0-9_]+)/page([0-9]+)\.html$"  => "/index.php?a=viewcategory&slug=$1&pageID=$2",
+	"^/categories([\/]{0,1})$"  => "/index.php?a=viewcategories",
 	"^/questions([\/]{0,1})$" => "/index.php?a=viewquestions",
 	"^/questions/page([0-9]+)\.html" => "/index.php?a=viewquestions&pageID=$1",
 	"^/questions/([0-9]+)/(.*)" => "/index.php?a=viewquestion&qid=$1&urltext=$2",
@@ -51,6 +54,5 @@ $HTTP["host"] == "support.lampcms.com" {
 	"^/search/(m|r)/(.*)/page([0-9]+)\.html$" => "/index.php?a=search&ord=$1&q=$2&pageID=$3",
 	"^/tab/(a|q)/([0-9]+)/([a-zA-Z]+)/page([0-9]+)\.html$" => "/index.php?a=userinfotab&tab=$1&uid=$2&sort=$3&pageID=$4",
 	"^/editprofile/([0-9]+)" => "/index.php?a=editprofile&uid=$1"
-
-)
+	)
 }
