Major refactoring of directory structure. Moved configurable files to config directory. Added bootstrap.php in www dir.

--- a/config/!config.ini
+++ b/config/!config.ini
@@ -1,20 +1,14 @@
 ;
-; IMPORTANT: 
-; If a value in the ini file contains any non-alphanumeric characters 
-; it needs to be enclosed in double-quotes (")
-;
-; Only simple values like a number 
-; or one-word can be entered with no quotes
-; but it's best to use double-quotes
-; around all values to avoid potential errors
+; IMPORTANT: enclose all values
+; in double quotes here!
 ;
 [DB]
 Database_name=LAMPCMS
 Database_host=localhost
 TCP_Port_number=
 Database_type=mysql
-Database_username=
-Database_password=
+Database_username=lamp
+Database_password=lampcms
 Persistent = 0
 
 [MONGO]
@@ -38,7 +32,7 @@ collection = "C_Cache"
 
 [CONSTANTS]
 ; set to true when debugging to enable
-; debug log and raise error reporting level
+; debug log and raize error reporting level
 DEBUG = true
 ;
 ; Directory where translations files
@@ -48,14 +42,14 @@ DEBUG = true
 ; if you want to prevent the upgrade
 ; process overriding you custom
 ; translation files
-; Directory still has to be a sub-directory of the root directory
+; Directory still has to be a sub-directory of the config directory
 ; of the project (where this file is located)
 TRANSLATIONS_DIR = "translations"
 ;
 ; Minimum number of tags question must have
 ; set to 0 to make tags optional
 ;
-MIN_QUESTION_TAGS = 1
+MIN_QUESTION_TAGS = 0
 ;
 ; Maximum number of tags Question can have
 ; This will be enforced when question is submitted
@@ -76,10 +70,13 @@ MIN_ANSWER_CHARS = 10
 ;
 ; Minimum number of words required for answer
 MIN_ANSWER_WORDS = 3
+
 ; maximum commets per item
 ; set to 0 to disable comments feature
 MAX_COMMENTS = 20
 ; max comments to show per item
+; 
+; completely
 SHOW_COMMENTS = 5
 ;
 ; Time interval in minutes in which poster can edit
@@ -100,7 +97,7 @@ FLOOD_CHECK_TIME = 2
 PER_PAGE_SEARCH = 10
 ; number of answers per page
 ; on the question page page
-PER_PAGE_ANSWERS = 20
+PER_PAGE_ANSWERS = 3
 ; number of questions per page
 ; on pages like home page or unanswered
 PER_PAGE_QUESTIONS = 20
@@ -109,9 +106,12 @@ PER_PAGE_QUESTIONS = 20
 PER_PAGE_USERS = 15
 ; This will be used in some page as title as well as in some emails as 'From' name
 SITE_TITLE = "LampCms Q and A site"
-SITE_NAME ="LampCMS project"
+SITE_NAME ="Support site for LampCMS project"
+;
 ;Default language
+;
 DEFAULT_LANG = en
+; 
 ; Default locale
 ; Must be a valid locale string!
 ; Also a translation file for this locale
@@ -134,6 +134,14 @@ SERVER_TIMEZONE = America/Chicago
 ;
 SKIP_CACHE = false
 ;
+; Should the Acl object be cached?
+; This will save about 5-10ms in instantiation time
+; but any changes to acl.ini file will not take
+; effect unless Acl key is removed from cache
+; Generally for high traffic site it
+; is a good idea to cache it.
+;
+; CACHE_ACL = true
 ;Leave blank unless
 ;you need to set cookie under some
 ;global domain.
@@ -141,15 +149,15 @@ SKIP_CACHE = false
 ;qa.oursite.com
 ;but you want to be able to access cookie
 ;of oursite.com, then you
-;should set this value
+;should set this value to .oursite.com
 ;
 COOKIE_DOMAIN = 
 ;
-; system path to temporary directory. Must we writable to php
-; if not sure - leave blank
+;system path to temporary directory. Must we writable to php
+; if not sure - leave blank to use system's default temporary directory
 ; 
 ;
-TEMP_DIR = 
+TEMP_DIR =
 ;
 ;Some configuration constants
 ;Leave blank if you host images, css and js
@@ -162,7 +170,7 @@ CSS_SITE = ""
 JS_SITE = ""
 AVATAR_IMG_SITE = ""
 ;size of square avatar in pixels
-AVATAR_SQUARE_SIZE= 40
+AVATAR_SQUARE_SIZE = "40"
 ;maximum allowed file size of
 ; uploaded avatar in bytes.
 ; default 1000000 means 1MB
@@ -174,55 +182,65 @@ MAX_AVATAR_UPLOAD_SIZE = 1024000
 ; each new script
 ; Logging is enabled in debugging mode only
 ;
-LOG_PER_SCRIPT = true
+LOG_PER_SCRIPT = false
 ; set LOG_FILE_PATH to point to your writable log file to enable logging
-; for example: /usr/local/apache/sites/qa.lampcms.com/logs/php.log
+; for example: /full/path/logs/php.log
 LOG_FILE_PATH = php.log
 ;/usr/local/apache/sites/lampcms.com/logs/cgiphp.log
 LOG_FILE_PATH_CGI = cgiphp.log
-;
-; base url of your main website. Required value! Leading slash not required.
-SITE_URL="http://localhost"
+; base url of your main website. Required value!
+SITE_URL="http://local.lampcms.com"
 ; system path to root directory (the directory that contains this file)
-LAMPCMS_PATH ="/"
+; (This is currently not used in production)
+LAMPCMS_PATH ="C:\eclipse\workspace\QA"
 ; system path to directory that is accessable via browser as /w/
-; This is optional value. Leave blank to use default data dir (recommended)
 LAMPCMS_DATA_DIR =
+; Directory where lampcms classes are located.
+; This is only used for multi-site installation
+; in which case include path to the 'lib' directory
+; of default Lampcms installation WITHOUT leading slash
+; for example "/var/lampcms/lib"
+; Leave blank if not using multi-site situp or if you
+; want each site to use own copy of lampcms
+LAMPCMS_LIB_DIR = 
 ;
-POSTFIX_PATH = /usr/sbin/sendmail
+;MAGIC_MIME_FILE = /usr/share/misc/magic
+;POSTFIX_PATH = /usr/sbin/sendmail
 ;
 ; email address of developer. 
-; Developer will be notified of php errors and various bad situations on the site //message@ptd.net
-EMAIL_DEVELOPER = "me@me.me"
+; Developer will be notified of php errors and various bad situations on the site
+EMAIL_DEVELOPER = ""
 ; email address of admin. Required value!
 ; Admin will also be notified on important events and errors
-EMAIL_ADMIN = "me@me.me"
-;
+EMAIL_ADMIN = "d.snytkine@gmail.com"
+
 ;
 ; Emails to new registrations sent from this domain
 ; Required value!
-EMAIL_DOMAIN = 
-;
-; SALT is Required value!
+EMAIL_DOMAIN = lampcms.com
 ; Make sure to set the value of SALT to a random string of about 40 chars
 ; then write it down and store it like gold!
 ; and never change it again!
 ; if it's lost, you will not be able to authenticate
 ; any existing users - users will never be able to login!
-SALT = 'abcdefg';
+SALT = '45s5w9fdh57d';
 ;
 ; COOKIE_SALT is Required value
 ;Enter some random string BEFORE launching your site
 ;but DONT EVER CHANGE IT AFTER
 ;you launched your site, otherwise users will not be
 ;able to auto-login to site using the 'remember me' cookie
-COOKIE_SALT = 'abcde1234512345'
+COOKIE_SALT = 'sdfwg4g54';
+
 ;
 ; Show page render time in footer? 
 ; set to true to have "Page generated in .... seconds
 ; added to bottom of pages
-SHOW_TIMER = false;
-;
+SHOW_TIMER = true;
+; If using Google friend connect, then you need to have the site id
+; sing up with Google Friend Connect first and get your site id
+; 
+;GFC_ID = 
 ; disable autocomplete widget
 ; in search form and in Title in "Ask" form
 ; Autocomplete does send request to server
@@ -249,14 +267,7 @@ SHOW_FLAGS = true
 ; leave this blank
 ; or set to 1 to make categories optional
 ; or set to 2 to make categories required
-;
-; Important: make sure to actually
-; add some categories 
-; (using /editcategory/ url) first otherwise
-; you may end up requiring user to select category
-; but there will be no drop-down menu and 
-; user will not be able to post a question at all
-CATEGORIES = 
+CATEGORIES = 1
 ; SEPARATOR TO BE USED IN BREADCRUMN 
 ; OF CATEGORYIES. 
 ; LEAVE INSIDE DOUBLE QUOTES TO PRESERVE SPACES
@@ -266,22 +277,22 @@ CATEGORY_SEPARATOR = " &gt; "
 ; categories deeper that this level
 ; will be shown in minimal details template
 ; REMEMBER that level starts at 0 not at 1!
-CATEGORY_DETAILED_LEVEL = 2
-;
-; Options of RTE Editor
+CATEGORY_DETAILED_LEVEL = 3
+
 [EDITOR]
 ;
 ; Add "Code editor" tools to RTE Editor
 ; This is very useful for programming - related Q&A Sites
 ; but totally unnecessary for non-programming sites,
 ; so it's disabled by default
-ENABLE_CODE_EDITOR = false;
+ENABLE_CODE_EDITOR = true;
 ;
 ; Add "YouTube" button to editor
 ; to allow adding youtube videos
 ; to Questions and Answers
 ENABLE_YOUTUBE = true;
 
+; Captcha config
 [CAPTCHA]
 ; to disable captcha for any reason
 ; set disabled = true
@@ -291,9 +302,10 @@ disabled = false
 ; change this to something between 3 and 25
 secretposition = 15
 ; Change this to any random string. CHANGE it to something unique!
-secretstring = "Stuff for captcha"
+secretstring = "Stuff for captcha image or something..."
 ; maximum captcha errors. After this ip will be blocked for awhile
 maxtry = 5
+
 
 ; GRAVATAR SUPPORT
 ; to Disable automatic
@@ -325,7 +337,6 @@ fallback = identicon
 ; rating  defaults to PG
 rating = PG
 
-
 [LOGIN_ERROR_LOCK]
 ;in what number of seconds login errors occured.
 interval = 360
@@ -344,14 +355,12 @@ max_errors = 4
 ; here the word office if for your own info, you can add another ip for 
 ; your home and add it on another line: 192.168.1.2=home
 ; You can add as many as you like
-127.0.0.1=home
-127.0.0.2=home1
+;127.0.0.1=home
+;127.0.0.2=home1
 
 [TWITTER]
 ; API_KEY is needed for the @anywhere JS library only
 ; get api key and secret from here http://dev.twitter.com/apps/new
-; When creating new application on Twitter Website MAKE SURE 
-; to select READ AND WRITE access (not just READ, else it would not work)
 ;
 API_KEY = 
 ; twitter consumer key and consumer secret for oauth
@@ -361,14 +370,17 @@ TWITTER_OAUTH_SECRET =
 ; we may also add new user to follow this account when they
 ; join
 TWITTER_USERNAME = 
+;QUESTION_TWEET_PREFIX = "#question"
+;ANSWER_TWEET_PREFIX = "My answer to: "
+
 
 [TUMBLR]
 ; You must register your app
 ; with Tumblr and get OAUTH_KEY and OAUTH_SECRET
 ; Go to this url to get yours: http://www.tumblr.com/oauth/apps
 ;
-OAUTH_KEY = 
-OAUTH_SECRET = 
+OAUTH_KEY = UixphW36Cn9bttsWT124tDxvVi4qh7qkdFOJOklzntbQ87NW9o
+OAUTH_SECRET = tRUWbPGH6Hq3r6jpz7wgBXrIqOQVrYRoLib9PQ57W6FHCmBTXi
 
 [FACEBOOK]
 ; Get your APP_ID and API_SECRET here: 
@@ -397,6 +409,12 @@ EXTENDED_PERMS = "email,publish_stream,offline_access"
 ; This should be fairly small image (about 50x50 or so)
 ; If set, it will appear on posts to Facebook as an icon
 SITE_LOGO =
+; This will be added under the link posted
+; to User's Facebook wall if user chooses to post
+; Question to Facebook. %s will be replaced with this site's name
+;Q_CAPTION = "I posted this question on %s. Click if you can answer it"
+; Save as Q_CAPTION but for case of Answer posted to Facebook.
+;A_CAPTION = "I answered this question on %s"
 
 ; Custom classes that extend LampcmsObserver
 ; can be listed here and they will be automatically
@@ -404,6 +422,8 @@ SITE_LOGO =
 ; see clsFloodCheck for an example on how to use it
 [OBSERVERS]
 ; To keep track of all login actions
+; Comment this out to deactivate logging of all login actions
+; if you don't need this type of statistics.
 logins = "\\Lampcms\\Modules\\Observers\\LoginHistory"
 ; To activate "whos online" feature
 online = "\\Lampcms\\Modules\\Observers\\Online"
@@ -413,12 +433,11 @@ online = "\\Lampcms\\Modules\\Observers\\Online"
 ; since each observer can halt the processing
 ; of script, make sure to put most important ones first
 ; and most resource-intensive last
-; Make sure Names are Unique - cannot use same filter name twice!
 [INPUT_FILTERS]
-ipFilter= "\\Lampcms\\Modules\\Observers\\IpFilter"
-floodCheck = "\\Lampcms\\Modules\\Observers\\FloodCheck"
-questionSimilar = "\\Lampcms\\Modules\\Observers\\Similars"
 
+;ipFilter = "\\Lampcms\\Modules\\Observers\\IpFilter"
+;floodCheck = "\\Lampcms\\Modules\\Observers\\FloodCheck"
+questionSimilar = "\\Lampcms\\Modules\\Observers\\Similars"
 ; If twitter filter is enabled (not commented out here)
 ; then a checkbox to "Post to Twitter" will be
 ; added to "Ask" and "Answer" forms
@@ -427,18 +446,7 @@ questionSimilar = "\\Lampcms\\Modules\\Observers\\Similars"
 ; Check the [TWITTER] section of this file for enabling 
 ; the Twitter API
 ;
-;twitter = "\\Lampcms\\Modules\\Observers\\PostTweet"
-
-; If facebook filter is enabled (not commented out here)
-; then a checkbox to "Post to Twitter" will be
-; added to "Ask" and "Answer" forms
-; Make sure you actually enabled Facebook API integration
-; before enabling this filter otherwise it will not work
-; Check the [FACEBOOK] section of this file for enabling 
-; the FACEBOOK API
-;
-;facebook = "\\Lampcms\\Modules\\Observers\\PostFacebook"
-
+twitter = "\\Lampcms\\Modules\\Observers\\PostTweet"
 ; If tumblr filter is enabled (not commented out here)
 ; then a checkbox to "Post to Tumblr" will be
 ; added to "Ask" and "Answer" forms
@@ -448,30 +456,20 @@ questionSimilar = "\\Lampcms\\Modules\\Observers\\Similars"
 ; the Tumblr API
 ;
 ;tumblr = "\\Lampcms\\Modules\\Tumblr\\PostTumblr"
-
-; If blogger filter is enabled (not commented out here)
-; then a checkbox to "Post to Blogger" will be
-; added to "Ask" and "Answer" forms
-; Make sure you actually enabled Blogger API integration
-; before enabling this filter otherwise it will not work
-; Check the [BLOGGER] section of this file for enabling 
-; the Blogger API
-;
-;blogger = "\\Lampcms\\Modules\\Blogger\\PostBlogger"
-;
-; If linkedin filter is enabled (not commented out here)
-; then a checkbox to "Post to linkedin" will be
-; added to "Ask" and "Answer" forms
-; Make sure you actually enabled linkedin API integration
-; before enabling this filter otherwise it will not work
-; Check the [LINKEDIN] section of this file for enabling 
-; the LinkedIn API
-;linkedin = "\\Lampcms\\Modules\\Linkedin\\Share"
-
 ; EmailNotifier can take long to run
 ; it's best to put this filter as the last filter
 ; 
+; If twitter filter is enabled (not commented out here)
+; then a checkbox to "Post to Twitter" will be
+; added to "Ask" and "Answer" forms
+; Make sure you actually enabled Twitter API integration
+; before enabling this filter otherwise it will not work
+; Check the [TWITTER] section of this file for enabling 
+; the Twitter API
+;
+twitter = "\\Lampcms\\Modules\\Observers\\PostTweet"
 EmailNotifier = "\\Lampcms\\Modules\\Observers\\EmailNotifier"
+
 
 ; bit.ly use used for shortening urls
 ; this is useful when posting questions/answers
@@ -482,10 +480,10 @@ EmailNotifier = "\\Lampcms\\Modules\\Observers\\EmailNotifier"
 ; Signup for bit.ly account to get
 ; your username and api key
 ; go here to get started: http://bit.ly/a/your_api_key
-; 
+;
 [BITLY]
-user=
-api_key =
+user=snytkine
+api_key = R_f9f58fdeb38aba1a3d441e1a7b93a382
 
 [CURL]
 ; primary ip address from which curl will connect
@@ -493,10 +491,13 @@ ip = "127.0.0.1"
 ; secondary ip address
 ip2 = "127.0.0.2"
 
+[TUMBLR]
+; Register your app here first: http://www.tumblr.com/oauth/register
+; and get API KEY and stuff
+OAUTH_KEY = UixphW36Cn9bttsWT124tDxvVi4qh7qkdFOJOklzntbQ87NW9o
+OAUTH_SECRET = tRUWbPGH6Hq3r6jpz7wgBXrIqOQVrYRoLib9PQ57W6FHCmBTXi
+
 [BLOGGER]
-; You must do these steps while logged in to Google with you
-; Google account - this is usually the same as your Gmail account
-;
 ; To get your blogger API KEY and Secret start here:
 ; http://code.google.com/apis/accounts/docs/RegistrationForWebAppsAuto.html
 ;
@@ -511,12 +512,22 @@ ip2 = "127.0.0.2"
 ; "Target URL path prefix"
 ; That will become your app's OAuth Consumer Key 
 ; and Google will generate the OAuth Consumer Secret value for you. 
-; Then enter the values here
-;
+; 
 OAUTH_KEY =
-OAUTH_SECRET =
-
-
+OAUTH_SECRET = 
+; OAuth Consumer Key:	 support.lampcms.com
+; OAuth Consumer Secret:	 E9SUbtZ8Y_-eepWxfAOa93Gz
+; GET /accounts/OAuthGetRequestToken?scope=https%3A%2F%2Fwww.blogger.com%2Ffeeds%2F HTTP/1.1
+; Host: www.google.com
+; Accept: */*
+; Authorization: OAuth oauth_version="1.0", oauth_nonce="2569c027b621123b9b088eb91e0dde3b", oauth_timestamp="1304514868", oauth_consumer_key="googlecodesamples.com", oauth_callback="http%3A%2F%2Fgooglecodesamples.com%2Foauth_playground%2Findex.php", oauth_signature_method="RSA-SHA1", oauth_signature="SIy7F%2FffIoTX76MtWN2X6E51Lg6NbAY%2BCnxl%2F0sdN%2Bd1uj7DpoezAeFNo3P4%2FqLbg4AqOXfhTjIvdEnFu5D5L2bpXncZrYxiA7Inou0DpTUiBH3HFWju%2FF3G3QyLRMunxfFFT%2FVU9OmPTOABBSWoeJ0MgptcKDTlOr%2BJqOnurIA%3D"
+; GET&https%3A%2F%2Fwww.google.com%2Faccounts%2FOAuthGetRequestToken&oauth_callback%3Dhttp%253A%252F%252Fgooglecodesamples.com%252Foauth_playground%252Findex.php%26oauth_consumer_key%3Dgooglecodesamples.com%26oauth_nonce%3D2569c027b621123b9b088eb91e0dde3b%26oauth_signature_method%3DRSA-SHA1%26oauth_timestamp%3D1304514868%26oauth_version%3D1.0%26scope%3Dhttps%253A%252F%252Fwww.blogger.com%252Ffeeds%252F
+;
+; Then to get actual token (exchange token to long-lived token) go here:
+; https://www.google.com/accounts/OAuthAuthorizeToken?oauth_token=4%2FIEXW61LuCx455WxXqDzUdA_3riew&hd=default
+; and make a POST 
+; timeStmp=1304515096&secTok=.AG5fkS8o8Iyk7_8AiR1Ox3Lax2l5kl9a5g%3D%3D&oauth_token=4%2FIEXW61LuCx455WxXqDzUdA_3riew&allow=Grant+access
+;
 
 [API]
 ; Maximum results an API can return per page
@@ -531,7 +542,6 @@ DAILY_LIMIT_USER = 10000
 ; defaults to 700Kb (my be in bytes)
 MAX_ICON_UPLOAD_SIZE = 700000;
 
-
 ;
 ; Oauth token and secret
 ; for Linkedin API
@@ -539,8 +549,8 @@ MAX_ICON_UPLOAD_SIZE = 700000;
 ; https://www.linkedin.com/secure/developer
 ;
 [LINKEDIN]
-;OAUTH_KEY = 
-;OAUTH_SECRET = 
+OAUTH_KEY = FXysdGwHpz-Wj2lX0_DvWgeqMSQbiugd71ldZBtRsWzFi3WXYhPeSiKSwbuZBl3_
+OAUTH_SECRET = fzI3jIwtSEKk5CUBJ0E5BOVms1VNb8oq9o6GEOUQYGtqarSdwqrqKez2-N4hCuLs
 
 ; List supported Language/Locales
 ; You should have translation .xlt files
@@ -548,4 +558,96 @@ MAX_ICON_UPLOAD_SIZE = 700000;
 ; translations directory
 [LOCALES]
 en_US = "English (United States)"
+en_GB = "English (United Kingdom)"
+fr_FR = "French"
+fr_CA = "French (Canadian)"
+de = "German"
+es = "Spanish (Spain)"
 ru_RU = "Russian"
+
+;
+; Point to award user for cetain actions
+; as well as points required to perform certain actions
+[POINTS]
+;
+;Someone voted for your question
+;  
+UPVOTE_Q = 5
+
+;
+;Someone voted for your answer
+;	 
+UPVOTE_A = 10
+
+;
+;Someone accepted your answer as best answer
+;
+BEST_ANSWER = 15
+
+;
+; You accepted someones answer to your question
+;
+ACCEPT_ANSWER = 2
+
+;
+;You down voted someone's question or answer
+;
+CAST_DOWNVOTE = -1
+
+;
+;Someone voted down your answer or question
+;
+DOWNVOTE = -2
+
+;
+;Your Q or A received marked as offensive 5 times
+;
+OFFENSIVE = -100
+
+;
+; User shared (posted)
+; Question or Answer to external site
+; via API (like Twitter or Facebook)
+; 
+SHARED_CONTENT = 5
+
+;
+;REPUTATION ACL LEVELS BELOW!
+;	
+
+; Need this many points to retag other
+; user's question
+;
+RETAG = 500
+
+; Need this many points to upvote
+;
+VOTE_UP = 15
+
+; Need this many points to downvote
+;
+VOTE_DOWN = 125
+
+; Need this many point to edit
+; Other user's content
+; 
+EDIT = 2000
+
+; Need this many points to
+; Comment of other user's Question or Answer
+;
+COMMENT = 25
+
+; The purpose of this section
+; is to define custom
+; Mongo Collections YOU may have created for your custom modules
+; By default there are no values here
+; Example entry would be like this:
+; MY_FRIENDS = "MY_FRIENDS"
+;
+; Look in lib/Lampcms/Mongo/Collections for actual file and how
+; the actual entries look like.
+[MYCOLLECTIONS]
+GITHUB_FOLLOWERS = GITHUB_FOLLOWERS
+
+GITHUB_FRIENDS = GITHUB_FRIENDS
