--- a/config/!config.ini
+++ b/config/!config.ini
@@ -190,19 +190,23 @@ LOG_FILE_PATH = php.log
 LOG_FILE_PATH_CGI = cgiphp.log
 ; base url of your main website. Required value!
 SITE_URL="http://local.lampcms.com"
-; system path to root directory (the directory that contains this file)
-; (This is currently not used in production)
-LAMPCMS_PATH ="C:\eclipse\workspace\QA"
+
+; Root web directory of site
+; leave blank for default installation in which
+; case your Q&A site is at the root url (accessing yoursite.com brings up your Q&A)
+; If you want your Lampcms to reside in a web folder other than root
+; you must define the web root here - start with slash (absolute path to your website root)
+; and no slash at the end
+; For example if your Lampcms Q&A is going to be installed accessible
+; like this: yoursite.com/community/
+; then this option will be set like this:
+; LAMPCMS_WEB_ROOT = /community
+WEB_ROOT =
+
+
 ; system path to directory that is accessable via browser as /w/
 LAMPCMS_DATA_DIR =
-; Directory where lampcms classes are located.
-; This is only used for multi-site installation
-; in which case include path to the 'lib' directory
-; of default Lampcms installation WITHOUT leading slash
-; for example "/var/lampcms/lib"
-; Leave blank if not using multi-site situp or if you
-; want each site to use own copy of lampcms
-LAMPCMS_LIB_DIR = 
+
 ;
 ;MAGIC_MIME_FILE = /usr/share/misc/magic
 ;POSTFIX_PATH = /usr/sbin/sendmail
@@ -240,7 +244,6 @@ SHOW_TIMER = true;
 ; If using Google friend connect, then you need to have the site id
 ; sing up with Google Friend Connect first and get your site id
 ; 
-;GFC_ID = 
 ; disable autocomplete widget
 ; in search form and in Title in "Ask" form
 ; Autocomplete does send request to server
@@ -278,6 +281,48 @@ CATEGORY_SEPARATOR = " &gt; "
 ; will be shown in minimal details template
 ; REMEMBER that level starts at 0 not at 1!
 CATEGORY_DETAILED_LEVEL = 3
+
+;
+;
+; Url parts placeholders in templates
+; will be replaced with these values
+; during page rendering
+[URL_PARTS]
+; 
+; Leave {_WEB_ROOT_} blank for default setup (lampcms in root web directory)
+; If setting up Lampcms in web directory then start path with slash
+; and no leading slash at the end
+; For example to setup Lampcms in the yoursite.com/community/forum directory
+; set the value of {_WEB_ROOT_} to /community/forum
+; to setup in the yoursite.com/forum directory
+; point {_WEB_ROOT_} to /forum
+;
+WEB_ROOT = 
+;
+; This is identifier of page number (example page2.html)
+PAGER_PREFIX = page
+;
+; This will be added to pagination links (example: page2.html)
+PAGER_EXT = .html
+QID = q
+NEW = new
+ACTIVE = active
+VOTED = voted
+POPULAR = popular
+TAG_NAME = name
+RECENT = recent
+OLDEST = oldest
+BEST = best
+VIEWS = views
+
+;
+; Routes are mapping url route (first part of the url directory structure
+; to the controller class
+; This is a 2-way mapping: urls are pointing to controller
+; and during creation of links the the "route" part in used to 
+; create a link to controller
+[ROUTES]
+
 
 [EDITOR]
 ;
