Fixed Issue #87 Updated many more classes and templates to work with new URI router

--- a/config/!config.ini.dist
+++ b/config/!config.ini.dist
@@ -330,6 +330,7 @@ SORT_VOTED = voted
 SORT_POPULAR = popular
 TAG_NAME = name
 SORT_RECENT = recent
+SORT_UPDATED = updated
 SORT_OLDEST = oldest
 SORT_BEST = best
 SORT_VIEWS = views
