Updated lighttpd.conf - config file for Lighttpd server. New rewrite rules are much simpler

--- a/lighttpd.conf
+++ b/lighttpd.conf
@@ -1,58 +1,32 @@
 ###
 ### this is lighttpd config for our own support site
 ### edit it to point to your own full path to www directory
+#
+# The rewrite rules are optional but if you decide to use them
+# make sure to edit your !config.ini and make sure the INDEX_FILE value is blank
+#
+# Also these rules are for hosting Lampcms in root directory
+# For hosting in sub-folder you will have to tweak these rules yourself
+#
 
 
+# This one is for hosting lampcms (new) in root dir
+# This is the actual configuration used in support.lampcms.com site
+#
 $HTTP["host"] == "support.lampcms.com" {
-  server.document-root = "/usr/local/apache/sites/support.lampcms.com/www/" 
-    url.rewrite-once = (
+  server.document-root = "/usr/local/support.lampcms.com/www/"
+     url.rewrite-once = (
+	"/(index|api)\.php" => "$0",
+	".*\.(png|gif|jpg|jpeg|css|js)$" => "$0",
+	".*\.(css|js)\?t" => "$0",
+  	"^/(.*)$" => "/index.php/$1"
+	)
 	#
-	# Q and A
+	# Expire headers for images, /js/min/ and style (mainly to cache main.css file)
 	#
-	#
-	"^/category/([a-zA-Z0-9_]+)([\/]{0,1})$" => "/index.php?a=viewcategory&slug=$1",
-	"^/category/([a-zA-Z0-9_]+)/page([0-9]+)\.html$"  => "/index.php?a=viewcategory&slug=$1&pageID=$2",
-	"^/categories([\/]{0,1})$"  => "/index.php?a=viewcategories",
-	"^/questions([\/]{0,1})$" => "/index.php?a=viewquestions",
-	"^/questions/page([0-9]+)\.html" => "/index.php?a=viewquestions&pageID=$1",
-	"^/questions/([0-9]+)/(.*)" => "/index.php?a=viewquestion&qid=$1&urltext=$2",
-	"^/q([0-9]+)/([^\/]+)/([a-zA-Z_]+)/page([0-9]+)\.html" => "/index.php?a=viewquestion&qid=$1&urltext=$2&sort=$3&pageID=$4",
-	"^/q([0-9]+)/(.*)" => "/index.php?a=viewquestion&qid=$1&urltext=$2",
-	"^/ask([\/]{0,1})$" => "/index.php?a=askform",
-	"^/voted([\/]{0,1})$" => "/index.php?a=viewquestions&cond=voted",
-	"^/voted/page([0-9]+)\.htm([l]{0,1})$" => "/index.php?a=viewquestions&cond=voted&pageID=$1",
-	"^/active([\/]{0,1})$" => "/index.php?a=viewquestions&cond=active",
-	"^/active/page([0-9]+)\.htm([l]{0,1})$" => "/index.php?a=viewquestions&cond=active&pageID=$1",
-	"^/unanswered([\/]{0,1})$" => "/index.php?a=unanswered",
-	"^/unanswered/noanswers([\/]{0,1})$" => "/index.php?a=unanswered&cond=noanswer",
-	"^/unanswered/noanswers/page([0-9]+)\.html$" => "/index.php?a=unanswered&cond=noanswer&pageID=$1",
-	"^/unanswered/tagged/([^\/]*)([\/]{0,1})$" => "/index.php?a=unanswered&cond=tagged&tags=$1",
-	"^/unanswered/tagged/([^\/]*)/page([0-9]+)\.html$" => "/index.php?a=unanswered&cond=tagged&tags=$1&pageID=$2",
-	"^/unanswered/page([0-9]+)\.html$" => "/index.php?a=unanswered&pageID=$1",
-	"^/tags([\/]{0,1})$" => "/index.php?a=viewqtags",
-	"^/tags/page([0-9]+)\.htm([l]{0,1})$" => "/index.php?a=viewqtags&pageID=$1",
-	"^/tags/name([\/]{0,1})$" => "/index.php?a=viewqtags&cond=name",
-	"^/tags/recent([\/]{0,1})$" => "/index.php?a=viewqtags&cond=recent",
-	"^/tags/popular([\/]{0,1})$" => "/index.php?a=viewqtags&cond=popular",
-	#
-	"^/tags/(name|recent|popular)/page([0-9]+)\.html$" => "/index.php?a=viewqtags&cond=$1&pageID=$2",
-	#
-	"^/tagged/(.*)/$" => "/index.php?a=tagged&tags=$1",
-	"^/tagged/(.*)/page([0-9]+)\.html$" => "/index.php?a=tagged&tags=$1&pageID=$2",
-	"^/vote/([0-9]+)/(up|down)$" => "/index.php?a=vote&resid=$1&res=q&type=$2",
-	"^/ansvote/([0-9]+)/(up|down)$" => "/index.php?a=vote&resid=$1&res=a&type=$2",
-	"^/accept/([0-9]+)$" => "/index.php?a=accept&aid=$1",
-	"^/users/([0-9]+)/(.*)" => "/index.php?a=userinfo&uid=$1&username=$2",
-	"^/users/([a-zA-Z]+)/page([0-9]+)\.html" => "/index.php?a=users&sort=$1&pageID=$2",
-	"^/users/([a-zA-Z]+)/" => "/index.php?a=users&sort=$1",
-	#
-	#	
-	"/register" => "/index.php?a=register",
-	"^/([a-zA-Z\-]+)/page([0-9]+)\.html$" => "/index.php?a=$1&pageID=$2",
-	"^/aa/([0-9]+)/([a-f0-9]+)$" => "/index.php?a=activate&eid=$1&hash=$2",
-	"^/([a-zA-Z\-]+)/$" => "/index.php?a=$1",
-	"^/search/(m|r)/(.*)/page([0-9]+)\.html$" => "/index.php?a=search&ord=$1&q=$2&pageID=$3",
-	"^/tab/(a|q)/([0-9]+)/([a-zA-Z]+)/page([0-9]+)\.html$" => "/index.php?a=userinfotab&tab=$1&uid=$2&sort=$3&pageID=$4",
-	"^/editprofile/([0-9]+)" => "/index.php?a=editprofile&uid=$1"
+	expire.url = (
+	"/images/" => "access plus 10 years",
+	"/js/min/" => "access plus 10 years",
+	"/style/" => "access plus 1 days",
 	)
 }
